--- a/src/components/profile-friends/style.css
+++ b/src/components/profile-friends/style.css
@@ -53,6 +53,20 @@
   min-width: 90px;
 }
 
+.profile-list-item-avatar-fallback {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  color: #fff
+}
+
 .profile-list-item-avatar img {
   height: 100%;
   width: 100%;
