--- a/src/components/profile-header/style.css
+++ b/src/components/profile-header/style.css
@@ -17,6 +17,20 @@
   z-index: 999;
 }
 
+.profile-avatar-fallback {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 1;
+  color: #fff;
+}
+
 .profile-avatar img {
   height: 100%;
   width: 100%;
