--- a/src/components/profile-posts/style.css
+++ b/src/components/profile-posts/style.css
@@ -34,6 +34,20 @@
   width: 100%;
 }
 
+.post-author-avatar-fallback {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1;
+  color: #fff;
+}
+
 .post-author-info {
   width: 100%;
   margin-left: 24px;
