--- a/src/components/profile-friends/style.css
+++ b/src/components/profile-friends/style.css
@@ -23,6 +23,7 @@
   border-radius: 10px;
 }
 
+
 .profile-list-item:last-child {
   margin-bottom: 0;
 }
@@ -66,6 +67,15 @@
   line-height: 1;
   color: #fff
 }
+
+.profile-list-item-avatar.is-top-friend {
+  position: relative;
+  box-shadow:
+    0 0 0 2px #fff,
+    0 0 0 4px #F2A399,
+    0 0 8px rgba(229,95,76,0.25);
+}
+
 
 .profile-list-item-avatar img {
   height: 100%;
